fix issues on mobile

--- a/resources/less/article.less
+++ b/resources/less/article.less
@@ -47,13 +47,13 @@
 @media (max-width: 600px) {
     .o-article{
         p, h1, h2, h3, h4, ol, ul{
-            margin-right: 1rem;
-            margin-left: 1rem;
+            margin-right: 2.5rem;
+            margin-left: 2.5rem;
         }
     }
     .o-article__meta, .o-article__comment{
-        margin-right: 1rem;
-        margin-left: 1rem;
+        margin-right: 2.5rem;
+        margin-left: 2.5rem;
     }
 }
 
