--- a/resources/less/setup.less
+++ b/resources/less/setup.less
@@ -42,3 +42,17 @@ h4{
     margin-top: @type-lg;
     font-size: @type-default;
 }
+@media (max-width: 900px) {
+    h1{
+        font-size: @type-xl;
+        line-height: 120%;
+    }
+    h2{
+        margin-top: @type-xl;
+        font-size: @type-lg;
+    }
+    h3{
+        margin-top: @type-lg;
+        font-size: @type-default;
+    }
+}
